Fixed gap in the text-choice

--- a/css/style.css
+++ b/css/style.css
@@ -269,12 +269,22 @@ section {
   position: relative;
   background-color: #e6e9e9;
   padding: 1rem;
-  display: flex;
-  gap: 1rem;
+  display: inline-flex;
+  /* gap: 3rem; */
   justify-content: center;
   align-items: center;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  --gap: 3rem;
+  /* display: inline-flex; */
+  flex-wrap: wrap;
+  margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
+  width: calc(100% + var(--gap));
+  z-index: -10;
+}
+
+.text-choice > * {
+  margin: var(--gap) 0 0 var(--gap);
 }
 
 #info-icon {
@@ -440,11 +450,13 @@ label:hover:before {
   border: 2px solid #8f490b !important;
 }
 
-@media (max-width: 940px) {
+@media (max-width: 970px) {
   .text-choice {
     flex-direction: column;
     align-items: flex-start;
     padding-left: 5%;
+    /* gap: 1rem; */
+    --gap: 1rem;
   }
   label[for="free"] {
     margin-bottom: 0.5rem;
